{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Keyboard",
            "id": "35e76f1a-73ad-4aad-a220-4c799e82245c",
            "actions": [
                {
                    "name": "Movement KeyBinds",
                    "type": "Value",
                    "id": "a3ad73c1-8963-40ae-937c-3545e5127613",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "1def6cb3-9b56-489a-8644-33a50075dfc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "75fb3ac6-f944-4408-8218-2b006fb273c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "e8fcee7e-c72f-4503-a5be-3dfbd0ce02d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Equip",
                    "type": "PassThrough",
                    "id": "8307b32e-d0f7-4382-924b-442f14dc0235",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "6daefb05-3b51-4445-8dcf-f071fdf6803d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "52724c4c-dc14-4d02-aba0-b611fbe2aa9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Holster&Equip",
                    "type": "Button",
                    "id": "a1c44331-0c2f-4d1b-9ba5-3d4890c92169",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "MoveThrough",
                    "type": "Button",
                    "id": "bc72296c-b3c8-4de8-925e-cc020b098ced",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "a85a9ed4-aedc-45a0-a245-5d3310c40709",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "RemoveWeapon",
                    "type": "Button",
                    "id": "6a5628fd-3b28-41b9-bf1d-e9b035548ffe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "88202cc3-062a-40c3-9842-650709659155",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "e6796a7a-6356-4c6a-8ae7-6bc6a06dc8f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "MoveVector",
                    "id": "744da326-a690-4391-aba5-7f84e60277ca",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74811f1e-16c3-4348-b16c-70a16140ca1a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d40c1eee-ea38-4c76-b2e5-b3e908702244",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cc8a47a4-30d2-42ce-ae38-40b0dd4b66c4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a653345d-522c-4c27-83a3-e1ef4a6e42b2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "PS4MoveVector",
                    "id": "8358d974-6ec9-416f-95c7-30af01e7b701",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d74deb6a-f9d5-4660-a954-f955bd82af4d",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "29985244-fea1-4963-899d-9e9536642a77",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0389cb2e-a705-4616-927d-ce3deac85ec7",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "feed838d-7bf7-45ab-b792-fba26a7b152d",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement KeyBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "80ef3816-8fb8-4eca-9fe6-5e3cfe25cc13",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0aaceb7-f7cd-4ee4-800f-0340fe88cc6d",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45127ec9-eec6-43c4-8456-3fee40804f82",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89ad697f-fcee-4630-8c10-a41d71f40b11",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a73b5232-e126-4cc6-a720-b7b41107dbb7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10a982cc-a5fb-4209-81e2-0f250b52cc5c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecf5bf74-e27c-45ad-8262-3f3df362642e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee2509bf-e2c9-415a-b877-4c9926d325dd",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0da26913-b3e8-49fb-96e2-f2ef1658439e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d561d7-af7e-44a1-8046-805367da74b3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3801f39b-e524-457a-a552-8868bfc9afaa",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b0edd9e-14be-4fbf-9e72-fbbdabe542d6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Holster&Equip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04fb0f62-d88d-4f81-a9b9-36b930edc080",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Holster&Equip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0116d04f-034c-468f-815c-e7346756719b",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveThrough",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbbcb670-1e71-47c5-98cd-8503d351f885",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c34ea25-a5da-4c2f-9e4c-657b1d03f03e",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f82166a-874f-4dcb-b045-72928b5989ad",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ce85c1c-7632-4f7e-8c97-a8a838fc5a84",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df3a978d-b5dd-470a-b8bd-e221deeae09d",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5889bba7-c6fd-4486-bb26-f8e2f91a967d",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c59727-a96d-4fcc-ab4b-65aa19086ecd",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "af9c3db3-1e2d-4a34-9ce3-cceae23234a5",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}